Fix background on mobile devices

--- a/too_long_to_read.css
+++ b/too_long_to_read.css
@@ -12,6 +12,9 @@
     padding: 0;
     text-align: left;
     background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
   }
  
 /* Headings */
